Closed Bug 786254 Opened 12 years ago Closed 11 years ago

SVG effects rendering doesn't pixel snap, causing faint vertical lines appear on some tabs

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla25

People

(Reporter: scook0+bugzilla, Assigned: xidorn)

References

Details

Attachments

(5 files, 1 obsolete file)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.7; rv:17.0) Gecko/17.0 Firefox/17.0
Build ID: 20120828042007

Steps to reproduce:

1. Make sure tabs-on-top is disabled. The problem occurs in either mode, but is easier to notice with tabs-on-bottom.
2. Open several tabs.


Actual results:

A faint vertical sometimes appears near the far-left or far-right of one or more tabs.


Expected results:

The tabs should appear smooth, with no visual glitches.
I'm using a mid-2009 13" MacBook Pro with a GeForce 9400M. Disabling hardware acceleration in Firefox makes no difference.
Stuart, could you please try reproducing this issue in safe mode(http://support.mozilla.com/en-US/kb/Safe+Mode)/with a new profile(http://support.mozilla.com/en-US/kb/Basic%20Troubleshooting#w_8-make-a-new-profile and http://support.mozilla.org/kb/Managing%20profiles) and report back whether you still see it or not?

Thank you!
I can confirm that this issue occurs in a fresh profile with no add-ons.
Bisecting nightlies, I have found that this issue does NOT occur in 2012-07-20, but DOES occur in 2012-07-21-03-05-55 and 2012-07-21-04-10-38.
This issue is still present in current nightlies as of 2012-09-07-03-05-54 (FF 18).
Version: 17 Branch → Trunk
I met the same issue in the nightly version as well.
Attached patch patch (obsolete) — Splinter Review
This simple patch seems to fix the problem.
Attachment #764678 - Flags: review?(mstange)
Comment on attachment 764678 [details] [diff] [review]
patch

Thanks for the patch! Unfortunately, this only works around a rendering bug. I think we should fix the real underlying bug instead.
Attachment #764678 - Flags: review?(mstange)
Attached file testcase
Status: UNCONFIRMED → NEW
Component: Untriaged → Layout
Ever confirmed: true
OS: Mac OS X → All
Product: Firefox → Core
Hardware: x86 → All
Summary: Faint vertical lines appear on some tabs → clip-path rendering doesn't pixel snap, causing faint vertical lines appear on some tabs
I'd like to work on this bug.
Great!
Assignee: nobody → quanxunzhen
Status: NEW → ASSIGNED
Attached file testcase for mask
This bug also affects mask property.
Summary: clip-path rendering doesn't pixel snap, causing faint vertical lines appear on some tabs → SVG effects rendering doesn't pixel snap, causing faint vertical lines appear on some tabs
Attachment #764678 - Attachment is obsolete: true
Attachment #779788 - Flags: review?(mstange)
Attachment #779788 - Flags: review?(mstange) → review?(roc)
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/517eaa8ba87e
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
Attached patch patch of reftestSplinter Review
Attachment #788598 - Flags: review?(roc)
Attachment #779788 - Attachment description: patch → patch [checkin: comment 14]
Attachment #779788 - Flags: review+
Comment on attachment 788598 [details] [diff] [review]
patch of reftest

Review of attachment 788598 [details] [diff] [review]:
-----------------------------------------------------------------

Excellent thanks!!!
Attachment #788598 - Flags: review?(roc) → review+
Keywords: checkin-needed
Blocks: 829825
Comment on attachment 779788 [details] [diff] [review]
patch [checkin: comment 14]

[Approval Request Comment]
Bug caused by (feature/regressing bug #): SVG effects support for non-SVG elements
User impact if declined: cause faint vertical lines on tabs on OS X which affects the visual experience. also cause bug 829825.
Testing completed (on m-c, etc.): a reftest has been added
Risk to taking this patch (and alternatives if risky): the patch is in the core layout component, might introduce some unknown rendering bugs.
String or IDL/UUID changes made by this patch: none
Attachment #779788 - Flags: approval-mozilla-beta?
(In reply to Xidorn Quan from comment #20)
> Comment on attachment 779788 [details] [diff] [review]
> patch [checkin: comment 14]
> 
> [Approval Request Comment]
> Bug caused by (feature/regressing bug #): SVG effects support for non-SVG
> elements
> User impact if declined: cause faint vertical lines on tabs on OS X which
> affects the visual experience. also cause bug 829825.
> Testing completed (on m-c, etc.): a reftest has been added
> Risk to taking this patch (and alternatives if risky): the patch is in the
> core layout component, might introduce some unknown rendering bugs.

Given this and keeping in mind we are very close to release of Fx24 , its too late to land this change on beta. Hence not approving. I'd prefer this ride's the train or get uplifted to aurora even after a couple of days on nightly if no new regressions are found.
> String or IDL/UUID changes made by this patch: none
Attachment #779788 - Flags: approval-mozilla-beta? → approval-mozilla-beta-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: