Bug 786254 - SVG effects rendering doesn't pixel snap, causing faint vertical lines appear on some tabs. r=roc